syntax = "proto3";

package bierzee;

import 'user.proto';

message LoginRequest {
  string loginId = 1;
  string organizationPassword = 2;
  string organizationCode = 3;
}

message LoginResponse {
  string sessionId = 1;
  bool isAdmin = 2;
  string name = 3;
}

message DrinkRequest {
  int32 beersDrunk = 2;
}

message DrunkResponse {
  repeated Beer beers = 1;
}

message Beer {
  int64 drunk_at = 1;
}

message PayRequest {
  double amount = 1;
}

message BrokeResponse {
  repeated Payment payments = 1;
}

message Payment {
  int64 paidAt = 1;
  double amountPaid = 2;
  bool denied = 3;
  User paidBy = 4;
  optional User deniedBy = 5;
  string paymentId = 6;
}

message GetBeerPriceResponse {
  int64 lastUpdated = 1;
  double price = 2;
  string lastChangedById = 3;
  string lastChangedByName = 4;
}

message SetBeerPriceRequest {
  double price = 1;
}

message BalanceResponse {
  double amountPaid = 1;
  int64 beersDrunk = 2;
  double balance = 3;
  int64 beersLeft = 4;
}

message OwesResponse {
  repeated OwningUser owningUsers = 1;
}

message OwningUser {
  string employeeId = 1;
  string name = 2;
  bool isAdmin = 3;
  double amountOwed = 4;
}

message SetAdminRequest {
  string employeeId = 1;
  bool admin = 2;
}

message GetAboutResponse {
  string version = 1;
  int32 versionMajor = 2;
  int32 versionMinor = 3;
  int32 versionPatch = 4;
  string authors = 5;
  string repository = 6;
  string license = 7;
}

message GetSessionResponse {
  string name = 1;
  bool isAdmin = 2;
  string id = 3;
}

message ListPaymentResponse {
  repeated Payment payments = 1;
}

message DenyPaymentRequest {
  string paymentId = 1;
  bool denied = 2;
}

message Notification {
  string id = 1;
  string user_id = 2;
  string text = 3;
  int64 created_at = 4;
}

message ListNotificationResponse {
  repeated Notification notifications = 1;
}

message CompleteNotificationRequest {
  string notificationId = 1;
  bool completed = 2;
}

message PurchaseBeerRequest {
  double amountPaid = 1;
  uint32 cratesPurchased = 2;
}

message GetBeerStockResponse {
  repeated BeerStockEntry stockEntries = 1;
  int64 bottlesLeft = 2;
  double paymentBalance = 3;
}

message BeerStockEntry {
  uint32 crates = 1;
  User purchasedBy = 2;
  int64 purchasedAt = 3;
}